--- a/src/app/charts/d3-scatter-plot/d3-scatter-plot.component.html
+++ b/src/app/charts/d3-scatter-plot/d3-scatter-plot.component.html
@@ -1,1 +1,4 @@
-<p>d3-scatter-plot works!</p>
+<div class="my-box-plot">
+    <p class="lead text-center">{{ yField }} - {{ xField }}</p>
+    <div #chart class="h-100 w-100"></div>
+</div>
