--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
+.custom-slider {
+    min-width: 40vw;
+    padding: 1rem;
+}
+
+.custom-slider .ngx-slider .ngx-slider-bar {
+    background: #ffe4d1;
+    height: 2px;
+}
+
+.custom-slider .ngx-slider .ngx-slider-selection {
+    background: orange;
+}
+
+.custom-slider .ngx-slider .ngx-slider-pointer {
+    width: 8px;
+    height: 16px;
+    top: auto;
+    /* to remove the default positioning */
+    bottom: 0;
+    background-color: #333;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+.custom-slider .ngx-slider .ngx-slider-pointer:after {
+    display: none;
+}
+
+.custom-slider .ngx-slider .ngx-slider-bubble {
+    bottom: 14px;
+}
+
+.custom-slider .ngx-slider .ngx-slider-limit {
+    font-weight: bold;
+    color: orange;
+}
+
+.custom-slider .ngx-slider .ngx-slider-tick {
+    width: 1px;
+    height: 10px;
+    margin-left: 4px;
+    border-radius: 0;
+    background: #ffe4d1;
+    top: -1px;
+}
+
+.custom-slider .ngx-slider .ngx-slider-tick.ngx-slider-selected {
+    background: orange;
+}
