--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.btn-close {
+    z-index: 9001;
+}
+
 .custom-slider {
     min-width: 40vw;
     padding: 1rem;
