--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,6 +71,9 @@
           &#8942;
         </button>
         <ul class="dropdown-menu dropdown-menu-end">
+          <li class="text-end">
+            <button class="btn btn-danger me-2" (click)="onRemoveGroup(grpIdx)">Remove Group</button>
+          </li>
           <li class="custom-slider">
             <p class="mb-0">AREA</p>
             <ngx-slider 
