added hover label

--- a/src/app/charts/d3-box-plot/d3-box-plot.component.html
+++ b/src/app/charts/d3-box-plot/d3-box-plot.component.html
@@ -1,4 +1,4 @@
 <div class="my-box-plot">
     <p class="lead text-center">{{ chartTitle }}</p>
-    <div #chart class="h-100 w-100"></div>
+    <div #chart class="h-100 w-100 position-relative"></div>
 </div>
